--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ html {
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
-  background-image: url(https://wallpapertag.com/wallpaper/full/2/4/8/361467-japanese-background-1920x1200-for-samsung.jpg);
+  background-image: url("../img/bakgrunn1.jpg");
   background-size: cover;
 }
 /* ----------------------------------------------*/
